[package]
name = "async_calc_server"
version = "0.1.0"
authors = ["Hasan Ibraheem <hasantiny@gmail.com>"]
edition = "2018"

[dependencies]
romio = "0.3.0-alpha.6"
futures-util-preview = "0.3.0-alpha.15"
futures-preview = "0.3.0-alpha.15"

[dependencies.async_calc_utils]
path = "../utils"
version = "0.1.0"
