[package]
name = "async_calc_utils"
version = "0.1.0"
authors = ["Hasan Ibraheem <hasantiny@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
futures-util = "0.3"
tokio = "0.2.0-alpha.6"
tokio-executor = "0.2.0-alpha.6"
byteorder = "1"
rand = "0.6"

[lib]
name = "calc_utils"
path = "lib.rs"
